# simple-board

./: .pre-commit-config.yaml  README.md  basic_data.sql  main.py  pyproject.toml
constants/: variables.py
dependencies/: auth.py
routers/: login.py  post.py
schemas/: login.py  post.py
services/: login.py  post.py
simple_board/: main.py
simple_board/common/: db_info.py
simple_board/routers/: post.py
simple_board/schemas/: post.py
simple_board/services/: post.py
