[tool.poetry]
name = "simple-board"
version = "0.1.0"
description = ""
authors = ["yeonwlee <tlstprl1806@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pre-commit = "^3.6.2"
sqlmodel = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
